--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,7 +1,7 @@
 language:
   ui:
     chapter_name: "Chapter "
-delete_merged_file: false
+delete_merged_file: true
 
 book_filename: "microbiome-part3"
 output_dir:
