--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -8,7 +8,7 @@ output_dir:
 rmd_files: [
 "index.Rmd",
 "03a_data_preparation.Rmd",
-# "03b_data_visualization.Rmd",
+"03b_data_visualization.Rmd",
 "99_appendix.Rmd",
 "999-references.Rmd"
 ]
