--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-cayman
-show_downloads: FALSE
-title: Microbioma Data Analysis in R PART 1
-description: A practical user guide for getting started with microbiome data analysis.
+show_downloads: true
+title: Exploratory Analysis of Microbiome Data
+description: Integrated solutions for better results.
+github:
+  is_project_page: true
