--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,8 +7,10 @@ book_filename: "microbiome-part3"
 output_dir:
 rmd_files: [
 "index.Rmd",
-"03a_data_preparation.Rmd",
-"03b_transform_visualize.Rmd",
+"03a_data_tidyng.Rmd",
+"03b_data_aggregation.Rmd",
+"03c_data_transformation.Rmd",
+"03d_data_visualization.Rmd",
 "99_appendix.Rmd",
 "999-references.Rmd"
 ]
